<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@drawable/img_bg_header">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_left_back_arrow" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sign_up_to_sage"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_17sdp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/country_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.6"
                    android:gravity="bottom"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_showFlag="false" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_weight="1.4"
                    android:visibility="visible">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_register_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_10sdp"
                        android:hint="@string/hint_mobile"
                        android:imeOptions="actionDone"
                        android:maxLength="15"
                        android:inputType="phone"
                        android:singleLine="true" />


                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_70sdp"
                android:background="@drawable/btn_shadded">

                <TextView
                    android:id="@+id/btn_register_one_next"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</layout>
