<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="bottom"
        android:orientation="vertical"

        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_25sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_nav_header_image"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_2sdp" />

                    <TextView
                        android:id="@+id/tv_nav_header_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="Sara Thomas"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_20sdp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@color/colorDivider" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/nav_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_categories"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/categories" />

                    <TextView
                        android:id="@+id/tv_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/img_categories"
                        android:text="@string/browse_categories"
                        android:textColor="#99333333"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/view1"
                    android:background="@color/colorDivider" />

                <RelativeLayout
                    android:id="@+id/nav_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_history"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/transactionhistory" />

                    <TextView
                        android:id="@+id/tv_history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/img_history"
                        android:text="@string/transaction_history"
                        android:textColor="#99333333"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/view2"
                    android:background="@color/colorDivider" />

                <RelativeLayout
                    android:id="@+id/nav_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_rating"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/rating" />

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/img_rating"
                        android:text="@string/rating"
                        android:textColor="#99333333"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/view3"
                    android:background="@color/colorDivider" />

                <RelativeLayout
                    android:id="@+id/nav_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_wallet"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/mywallet" />

                    <TextView
                        android:id="@+id/tv_wallet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/img_wallet"
                        android:text="@string/my_wallet"
                        android:textColor="#99333333"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:id="@+id/view4"
                    android:background="@color/colorDivider" />

                <RelativeLayout
                    android:id="@+id/nav_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_message"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/help" />

                    <TextView
                        android:id="@+id/tv_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/img_message"
                        android:text="@string/messages"
                        android:textColor="#99333333"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorDivider" />

                <RelativeLayout
                    android:id="@+id/nav_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_help"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/help" />

                    <TextView
                        android:id="@+id/tv_help"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/img_help"
                        android:text="@string/help"
                        android:textColor="#99333333"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorDivider" />


                <RelativeLayout
                    android:id="@+id/nav_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_contact"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/contactus" />

                    <TextView
                        android:id="@+id/tv_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/img_contact"
                        android:text="@string/contact_us"
                        android:textColor="#99333333"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorDivider" />

                <RelativeLayout
                    android:id="@+id/nav_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_about"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/aboutus" />

                    <TextView
                        android:id="@+id/tv_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/img_about"
                        android:text="@string/about_us"
                        android:textColor="#99333333"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorDivider" />

                <RelativeLayout
                    android:id="@+id/nav_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img_logout"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/logout" />

                    <TextView
                        android:id="@+id/tv_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/img_logout"
                        android:text="@string/logout"
                        android:textColor="#99333333"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>