<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@drawable/img_bg_header">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_left_back_arrow" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sign_to_sage"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_17sdp" />

                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:visibility="visible">

                <EditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_10sdp"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp">

                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/simplePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@null"
                    app:drawable_hide="@drawable/ic_show_password"
                    app:drawable_show="@drawable/ic_hide_password" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:button="@drawable/circle_checkbox"
                        android:buttonTintMode="multiply"
                        android:paddingLeft="@dimen/_10sdp"
                        android:id="@+id/cb_login_remember"
                        android:text="@string/txt_remember_me" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_login_forgot_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@drawable/circle_checkbox"
                        android:gravity="end" />

                    <View
                        android:layout_width="@dimen/_95sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_gravity="end"
                        android:background="@color/colorAccent" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_70sdp"
                android:background="@drawable/btn_shadded">

                <TextView
                    android:id="@+id/tv_login_submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</layout>
